Fix Moderator shield align

--- a/common/common.scss
+++ b/common/common.scss
@@ -840,5 +840,10 @@ border-bottom: 1px #fff solid;
     border-radius: 5px;
 }
 
+i.fa.fa-shield-alt.d-icon.d-icon-shield-alt:before {
+    font-size: 1.2em;
+    vertical-align: middle;
+    padding-left: 4px;
+}
 
 
